--- a/.github/workflows/immortalwrt-r2s-openwrt.yml
+++ b/.github/workflows/immortalwrt-r2s-openwrt.yml
@@ -35,6 +35,7 @@ jobs:
         ./scripts/feeds update -a
         ./scripts/feeds install -a
         patch -p1 < "${GITHUB_WORKSPACE}/patches/1806-modify_for_r2s.patch"
+        bash .${GITHUB_WORKSPACE}/patches/additional_patch.sh
     - name: Build ImmortalWrt-18.06
       run: |
         cd "/home/runner/immortalwrt"
@@ -103,6 +104,7 @@ jobs:
         ./scripts/feeds update -a
         ./scripts/feeds install -a
         patch -p1 < "${GITHUB_WORKSPACE}/patches/snapshot-modify_for_r2s.patch"
+        bash .${GITHUB_WORKSPACE}/patches/additional_patch.sh
     - name: Build ImmortalWrt-Snapshot
       run: |
         cd /home/runner/immortalwrt
