--- a/.github/workflows/immortalwrt-r2s-openwrt.yml
+++ b/.github/workflows/immortalwrt-r2s-openwrt.yml
@@ -52,7 +52,14 @@ jobs:
         make -j1 V=s
         mv -f "bin/targets/rockchip/armv8/immortalwrt-rockchip-armv8-friendlyarm_nanopi-r2s-ext4-sysupgrade.img.gz" "../immortalwrt-18.06-rockchip-armv8-friendlyarm_nanopi-r2s-ext4-sysupgrade.img.gz"
         mv -f "bin/targets/rockchip/armv8/immortalwrt-rockchip-armv8-friendlyarm_nanopi-r2s-squashfs-sysupgrade.img.gz" "../immortalwrt-18.06-rockchip-armv8-friendlyarm_nanopi-r2s-squashfs-sysupgrade.img.gz"
-        mv -f "bin/targets/rockchip/armv8/sha256sums" "../immortalwrt-18.06-sha256sums"
+        mv -f "bin/targets/rockchip/armv8/sha256sums" "../immortalwrt-18.06-sha256sums"   
+    - name: Send notification via serverchan
+      if: failure()
+      run: |
+        curl https://sctapi.ftqq.com/SCT26999TRKZl6FbqVksYloyw6a6bLWfx.send?TEXT='R2S_18.06固件编译出错！'
+    - name: Send notification
+      run: |
+        curl https://sctapi.ftqq.com/SCT26999TRKZl6FbqVksYloyw6a6bLWfx.send?TEXT='R2S_18.06固件编译完成！'
     - name: Upload ImmortalWrt-18.06 SHA256SUM Hash
       uses: actions/upload-artifact@v2
       with:
@@ -122,6 +129,13 @@ jobs:
         mv -f "bin/targets/rockchip/armv8/immortalwrt-rockchip-armv8-friendlyarm_nanopi-r2s-ext4-sysupgrade.img.gz" "../immortalwrt-snapshot-rockchip-armv8-friendlyarm_nanopi-r2s-ext4-sysupgrade.img.gz"
         mv -f "bin/targets/rockchip/armv8/immortalwrt-rockchip-armv8-friendlyarm_nanopi-r2s-squashfs-sysupgrade.img.gz" "../immortalwrt-snapshot-rockchip-armv8-friendlyarm_nanopi-r2s-squashfs-sysupgrade.img.gz"
         mv -f "bin/targets/rockchip/armv8/sha256sums" "../immortalwrt-snapshot-sha256sums"
+    - name: Send notification via serverchan
+      if: failure()
+      run: |
+        curl https://sctapi.ftqq.com/SCT26999TRKZl6FbqVksYloyw6a6bLWfx.send?TEXT='R2S_Snapshot固件编译出错！'
+    - name: Send notification
+      run: |
+        curl https://sctapi.ftqq.com/SCT26999TRKZl6FbqVksYloyw6a6bLWfx.send?TEXT='R2S_Snapshot固件编译完成！'
     - name: Upload ImmortalWrt-Snapshot SHA256SUM Hash
       uses: actions/upload-artifact@v2
       with:
